--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <header>
       <h1>Bus Mall</h1>
       <!-- <img src="img/bag.jpg"> -->
-      <h2>Products that DRIVE Innovation</h2>
-      <span id="runningTotal"></span>
+      <h2>Products That DRIVE Innovation</h2>
+      <span id="runningTotal"></span><span id="runningCount"> of 25 sections made</span>
     </header>
     <main>
       <section>
+      <h3>Instructions:<h3>
+      <p> You will be shown 3 images at a time, please select which product you like the most among the available choices by clicking on that image. You will ask you to repeat the selection process 25 times. At the end of the survey, we will provide you with the results form the study. Thank you for you time.</p>
+      <br>
+      <p>(press the "Start Test" button to begin)</p>
       <p>Please select and image</p>
+      <button id="startButton">Start Test</button>
     </section>
     <section>
       <ul class "gallery" id="imageSpace"><ul>
