--- a/index.html
+++ b/index.html
@@ -3,30 +3,35 @@
   <head>
     <link rel="stylesheet" href="reset-style.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Bitter|Copse|Cutive|Lora:700|Sanchez|Scope+One|Slabo+27px|Trocchi|Vesper+Libre" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Bus Mall</h1>
       <!-- <img src="img/bag.jpg"> -->
       <h2>Products That DRIVE Innovation</h2>
-      <span id="runningTotal"></span><span id="runningCount"> of 25 sections made</span>
     </header>
     <main>
       <section>
-      <h3>Instructions:<h3>
-      <p> You will be shown 3 images at a time, please select which product you like the most among the available choices by clicking on that image. You will ask you to repeat the selection process 25 times. At the end of the survey, we will provide you with the results form the study. Thank you for you time.</p>
-      <br>
-      <p>(press the "Start Test" button to begin)</p>
-      <p>Please select and image</p>
-      <button id="startButton">Start Test</button>
-    </section>
-    <section>
-      <ul class "gallery" id="imageSpace"><ul>
-    </section>
-    <section>
-      <table id="tableResults">
-      </table>
-    </section>
+        <div id=intro>
+          <h3>Instructions:</h3>
+          <p> You will be shown 3 images at a time, please select your favorite product among them. You will be asked you to repeat the selection process 25 times. At the end of the survey, the results will be provided. Thank you.</p>
+          <br>
+          <p>(press the "Start Test" button to begin)</p>
+        </div>
+        <button id="startButton">Start Test</button>
+      </section>
+      <section>
+        <div id="runningCounter" class="hidden">
+          <span id="runningTotal"></span>
+          <span id="runningCount"> of 25 sections made</span>
+        </div>
+        <ul class "gallery" id="imageSpace"><ul>
+      </section>
+      <section>
+        <table id="tableResults">
+        </table>
+      </section>
     </main>
     <footer>
     </footer>
