--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="reset-style.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Bitter|Copse|Cutive|Lora:700|Sanchez|Scope+One|Slabo+27px|Trocchi|Vesper+Libre" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
   </head>
   <body>
     <header>
@@ -31,6 +32,15 @@
         <table id="tableResults">
         </table>
       </section>
+      <div class="chartjs">
+        <canvas id="canvas1" width="50px" height="50px" ></canvas>
+      </div>
+      <div class="chartjs">
+        <canvas id="canvas2" width="50px" height="50px" ></canvas>
+      </div>
+      <div class="chartjs">
+        <canvas id="canvas3" width="50px" height="50px" ></canvas>
+      </div>
     </main>
     <footer>
     </footer>
