update top 5 counter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section>
         <div id=intro>
           <h3>Instructions:</h3>
-          <p> You will be shown 3 images at a time, please select your favorite product among them. You will be asked you to repeat the selection process 25 times. At the end of the survey, the results will be provided. Thank you.</p>
+          <p> You will be shown 3 images at a time, please select your favorite product among them. You will be asked to repeat the selection process 25 times. At the end of the survey, the results will be provided. Thank you.</p>
           <br>
           <p>(press the "Start Test" button to begin)</p>
         </div>
@@ -33,14 +33,18 @@
         </table>
       </section>
       <div class="chartjs">
-        <canvas id="canvas1" width="50px" height="50px" ></canvas>
+        <canvas id="canvas1" width="450" height="300px" ></canvas>
       </div>
       <div class="chartjs">
-        <canvas id="canvas2" width="50px" height="50px" ></canvas>
+        <canvas id="canvas2" width="450px" height="300px" ></canvas>
       </div>
       <div class="chartjs">
-        <canvas id="canvas3" width="50px" height="50px" ></canvas>
+        <canvas id="canvas3" width="450px" height="300px" ></canvas>
       </div>
+    </div>
+    <div class="chartjs">
+      <canvas id="canvas4" width="450px" height="300px" ></canvas>
+    </div>
     </main>
     <footer>
     </footer>
