update for top 5

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <span id="runningTotal"></span>
           <span id="runningCount"> of 25 sections made</span>
         </div>
+        <div id="notice"></div>
         <ul class "gallery" id="imageSpace"><ul>
       </section>
       <section>
